--- a/completed.html
+++ b/completed.html
@@ -1,14 +1,27 @@
+<!-- completed.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Access Complete</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>Scan Completed</title>
+  <style>
+    body {
+      background-color: #0f0f0f;
+      color: #00ff99;
+      font-family: sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+    }
+    h1 {
+      font-size: 2em;
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <h1>✅ Access Granted</h1>
-        <p>Welcome, agent. You may proceed.</p>
-    </div>
+  <h1>✅ Scan Completed Successfully!</h1>
+  <p>You may now proceed.</p>
 </body>
 </html>
