--- a/completed.html
+++ b/completed.html
@@ -1,27 +1,153 @@
-<!-- completed.html -->
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Scan Completed</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Biometric Scanner Pro</title>
   <style>
     body {
-      background-color: #0f0f0f;
-      color: #00ff99;
-      font-family: sans-serif;
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #000;
+      color: white;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       height: 100vh;
+      overflow: hidden;
     }
-    h1 {
-      font-size: 2em;
+    .scanner-container {
+      text-align: center;
+      padding: 20px;
+    }
+    .scanner-container input {
+      margin: 10px;
+      padding: 10px;
+      width: 250px;
+      font-size: 16px;
+      border-radius: 10px;
+      border: none;
+    }
+    .scanner-btn {
+      background-color: #00ff00;
+      color: black;
+      border: none;
+      padding: 12px 20px;
+      margin: 10px;
+      font-size: 18px;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+    .scanner-btn:hover {
+      background-color: #00cc00;
+    }
+    .fingerprint, .eye-scan {
+      margin-top: 20px;
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      background-size: cover;
+      background-repeat: no-repeat;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    .fingerprint {
+      background-image: url('https://media.giphy.com/media/3orieWf7Kf4GsEptI0/giphy.gif');
+      animation: pulse 2s infinite;
+    }
+    video.eye-camera {
+      width: 120px;
+      height: 90px;
+      border-radius: 10px;
+      object-fit: cover;
+      margin-top: 10px;
+    }
+    @keyframes pulse {
+      0% { transform: scale(1); opacity: 1; }
+      50% { transform: scale(1.1); opacity: 0.7; }
+      100% { transform: scale(1); opacity: 1; }
+    }
+    .hidden {
+      display: none;
     }
   </style>
 </head>
 <body>
-  <h1>✅ Scan Completed Successfully!</h1>
-  <p>You may now proceed.</p>
-</body>
+  <div class="scanner-container">
+    <h1>Biometric Scanner Pro</h1>
+    <input type="text" id="userName" placeholder="Enter Your Name" />
+    <input type="text" id="userId" placeholder="Enter Your ID Number" /><video id="eyeCamera" autoplay playsinline class="eye-camera"></video>
+<button class="scanner-btn" onclick="scanEye()">Scan Eye</button>
+
+<div class="fingerprint"></div>
+<button class="scanner-btn" onclick="scanFingerprint()">Scan Fingerprint</button>
+
+<p id="statusText"></p>
+
+  </div><audio id="scanSound" src="https://www.soundjay.com/button/beep-07.wav"></audio> <audio id="completeSound" src="https://www.soundjay.com/button/beep-10.wav"></audio>
+
+  <script>
+    let eyeScanned = false;
+    let fingerprintScanned = false;
+
+    function playSound(id) {
+      const sound = document.getElementById(id);
+      if (sound) sound.play();
+    }
+
+    // Enable front camera for eye scan
+    navigator.mediaDevices.getUserMedia({ video: { facingMode: "user" } })
+      .then((stream) => {
+        document.getElementById("eyeCamera").srcObject = stream;
+      })
+      .catch((error) => {
+        console.error("Camera error:", error);
+        document.getElementById("statusText").innerText = "Camera access denied or not supported.";
+      });
+
+    function scanEye() {
+      const name = document.getElementById('userName').value;
+      const id = document.getElementById('userId').value;
+      if (!name || !id) {
+        alert('Please enter your name and ID first.');
+        return;
+      }
+      localStorage.setItem('userName', name);
+      localStorage.setItem('userId', id);
+      playSound('scanSound');
+      document.getElementById('statusText').innerText = 'Scanning Eye...';
+      setTimeout(() => {
+        eyeScanned = true;
+        document.getElementById('statusText').innerText = 'Eye Scan Complete ✔';
+        checkCompletion();
+      }, 3000);
+    }
+
+    function scanFingerprint() {
+      const name = localStorage.getItem('userName');
+      const id = localStorage.getItem('userId');
+      if (!name || !id) {
+        alert('Please enter your name and ID first.');
+        return;
+      }
+      playSound('scanSound');
+      document.getElementById('statusText').innerText = 'Scanning Fingerprint...';
+      setTimeout(() => {
+        fingerprintScanned = true;
+        document.getElementById('statusText').innerText = 'Fingerprint Scan Complete ✔';
+        checkCompletion();
+      }, 3000);
+    }
+
+    function checkCompletion() {
+      if (eyeScanned && fingerprintScanned) {
+        playSound('completeSound');
+        document.getElementById('statusText').innerText = 'Biometric Authentication Complete ✅';
+        setTimeout(() => {
+          window.location.href = 'completed.html';
+        }, 2000);
+      }
+    }
+  </script></body>
 </html>
